--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -37,14 +37,12 @@ add_compile_definitions(TEST)
 
 include_directories(../src)
 
-# Excluding test_buffer because it fails to build even in the boilerplate app
-# See: https://github.com/LedgerHQ/app-boilerplate/issues/6
-# add_executable(test_buffer test_buffer.c)
+add_executable(test_buffer test_buffer.c)
 add_executable(test_format test_format.c)
 add_executable(test_write test_write.c)
 add_executable(test_apdu_parser test_apdu_parser.c)
 
-# add_library(buffer SHARED ../src/common/buffer.c)
+add_library(buffer SHARED ../src/common/buffer.c)
 add_library(read SHARED ../src/common/read.c)
 add_library(write SHARED ../src/common/write.c)
 add_library(format SHARED ../src/common/format.c)
@@ -52,12 +50,12 @@ add_library(varint SHARED ../src/common/varint.c)
 add_library(apdu_parser SHARED ../src/apdu/parser.c)
 add_library(transaction_deserialize ../src/transaction/deserialize.c)
 
-# target_link_libraries(test_buffer PUBLIC cmocka gcov read write varint buffer)
+target_link_libraries(test_buffer PUBLIC cmocka gcov buffer varint write read)
 target_link_libraries(test_format PUBLIC cmocka gcov format)
 target_link_libraries(test_write PUBLIC cmocka gcov write)
 target_link_libraries(test_apdu_parser PUBLIC cmocka gcov apdu_parser)
 
-# add_test(test_buffer test_buffer)
+add_test(test_buffer test_buffer)
 add_test(test_format test_format)
 add_test(test_write test_write)
 add_test(test_apdu_parser test_apdu_parser)
