Fix runtime error in functions reading signed integers
Found by UBSan

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(../src)
 add_executable(test_base58 test_base58.c)
 add_executable(test_buffer test_buffer.c)
 add_executable(test_format test_format.c)
+add_executable(test_read test_read.c)
 add_executable(test_write test_write.c)
 add_executable(test_apdu_parser test_apdu_parser.c)
 
@@ -55,6 +56,7 @@ add_library(transaction_deserialize ../src/transaction/deserialize.c)
 target_link_libraries(test_base58 PUBLIC cmocka gcov base58)
 target_link_libraries(test_buffer PUBLIC cmocka gcov buffer varint write read)
 target_link_libraries(test_format PUBLIC cmocka gcov format)
+target_link_libraries(test_read PUBLIC cmocka gcov read)
 target_link_libraries(test_write PUBLIC cmocka gcov write)
 target_link_libraries(test_apdu_parser PUBLIC cmocka gcov apdu_parser)
 
