--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -82,13 +82,6 @@ jobs:
 
     container:
       image: ghcr.io/ledgerhq/speculos:latest
-      ports:
-        - 1234:1234
-        - 9999:9999
-        - 40000:40000
-        - 41000:41000
-        - 42000:42000
-        - 43000:43000
       options: --entrypoint /bin/bash
 
     steps:
@@ -103,9 +96,11 @@ jobs:
 
       - name: Run test
         run: |
-          apt update && apt install -qy gcc  # /!\ workaround for pysha3
+          apt update && apt install -qy gcc netcat  # /!\ workaround for pysha3
+          pip install -r tests/requirements.txt
           nohup bash -c "python /speculos/speculos.py bin/app.elf --sdk 2.0 --apdu-port 9999 --button-port 42000 --automation-port 43000 --display headless" > speculos.log 2<&1 &
-          cd tests && pip install -r requirements.txt && pytest --headless
+          until `nc -w5 -z -v 127.0.0.1 9999`; do sleep 1; done;
+          cd tests && pytest --headless
 
       - name: Upload Speculos log
         uses: actions/upload-artifact@v2
